--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
     <h2>For all your incorporated company needs</h2>
 
     <!-- First, create a form tag where our inputs will be nested -->
-    <form action="" method=POST">
+    <form action="" method="POST">
 
       <!-- Add a label for 'fullname'-->
+      
 
       <!-- Add a text input with the id and name attributes set to 'fullname' -->
       <!-- Include the place holder text "Enter Name" and make this input required -->
