--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <form action="" method="POST">
 
       <!-- Add a label for 'fullname'-->
-      <label></label>
+      <label>fullname</label>
 
       <!-- Add a text input with the id and name attributes set to 'fullname' -->
       <!-- Include the place holder text "Enter Name" and make this input required -->
