automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <label>fullname</label>
 
       <!-- Add a text input with the id and name attributes set to 'fullname' -->
-      <
+      <input type="text"
       
       <!-- Include the place holder text "Enter Name" and make this input required -->
 
