--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <label>fullname</label>
 
       <!-- Add a text input with the id and name attributes set to 'fullname' -->
-      <input type="text" id="fullname" name="fullname">
+      <input type="text" id="fullname" name="fullname" placeholder="">
       
       <!-- Include the place holder text "Enter Name" and make this input required -->
       
