--- a/index.html
+++ b/index.html
@@ -25,13 +25,14 @@
 
       <!-- Add a email input with the id and name attributes set to 'email' -->
       <!-- Include the place holder text "Enter Email" and make this input required -->
-      <input type="email" id="email" name="email" placeholder="email@gmail.com" required>
+      <input type="email" id="email" name="email" placeholder="Enter Email" required>
 
       <!-- Add a label for 'phone'-->
-
+      <label>phone</label>
+      
       <!-- Add a telephone input with the id and name attributes set to 'phone' -->
       <!-- Include the place holder text "Enter Telephone (optional)" -->
-
+      <input type="telephone" id="telephone" name="telephone" placeholder="Enter Telephone (optional)">
 
       <!-- Add a label for 'message'-->
 
