automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -35,10 +35,11 @@
       <input type="telephone" id="telephone" name="telephone" placeholder="Enter Telephone (optional)">
 
       <!-- Add a label for 'message'-->
+      <label>message</label>
 
       <!-- Add a textarea tag with the id and name attributes set to 'message' -->
       <!-- Include the place holder text "Enter Message" -->
-
+      <input type="telephone" id="message" name="message" placeholder="Enter Message">
 
       <!-- Add a checkbox input with the id set to 'checkbox' -->
 
