--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
 
       <!-- Add a textarea tag with the id and name attributes set to 'message' -->
       <!-- Include the place holder text "Enter Message" -->
-      <textarea type="telephone" id="message" name="message" placeholder="Enter Message">
+      <textarea id="message" name="message" placeholder="Enter Message">
 
       <!-- Add a checkbox input with the id set to 'checkbox' -->
-
+      
 
 
       <!-- Add an input with the type set to 'submit' -->
