automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
       <textarea id="message" name="message" placeholder="Enter Message">
 
       <!-- Add a checkbox input with the id set to 'checkbox' -->
-      
+      <label for="Submit">Submit</label>
+      <input type="check" name="Submit">
+
 
 
       <!-- Add an input with the type set to 'submit' -->
