automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
       <!-- Add a checkbox input with the id set to 'checkbox' -->
       <label for="Submit">Submit</label>
-      <input type="check" name="Submit">
+      <input type="checkbox" name="Submit">
 
 
 
