automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -42,12 +42,10 @@
       <textarea id="message" name="message" placeholder="Enter Message">
 
       <!-- Add a checkbox input with the id set to 'checkbox' -->
-      <input type="checkbox" name="Submit">
-
-
+      <input type="checkbox" id="checkbox">
 
       <!-- Add an input with the type set to 'submit' -->
-      
+            
 
 
     </form>
