automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <input type="checkbox" id="checkbox">
 
       <!-- Add an input with the type set to 'submit' -->
-            
+      <input type="submit" id="submit">
 
 
     </form>
