automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -42,11 +42,10 @@
       <textarea id="message" name="message" placeholder="Enter Message">
 
       <!-- Add a checkbox input with the id set to 'checkbox' -->
-      <label>checkbox</label>
       <input type="checkbox" id="checkbox">
 
       <!-- Add an input with the type set to 'submit' -->
-      <input type="submit" id="submit">
+      <input type="submit">
 
 
     </form>
